--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <section class="product">
     <h2 class="product-category">best selling</h2>
-    <button class="pre-btn"><img src="img/arrow.png" alt=""></button>
-    <button class="nxt-btn"><img src="img/arrow.png" alt=""></button>
-    <div class="product-container">
+    <button class="pre-btn" id="pre-btn"><img src="img/arrow.png" alt=""></button>
+    <button class="nxt-btn" id="nxt-btn"><img src="img/arrow.png" alt=""></button>
+    <div class="product-container" id="product-container">
         <div class="product-card">
             <div class="product-image">
                 <span class="discount-tag">50% off</span>
@@ -110,14 +110,28 @@
                 <span class="price">$20</span><span class="actual-price">$40</span>
             </div>
         </div>
-
-        <script src="js/home.js"></script>
-       
     </div>
 </section>
 
+<script src="js/home.js"></script>
 
+<section class="collection-container">
+    <a href="#" class="collection">
+        <img src="img/women-collection.png" alt="">
+        <p class="collection-title">women <br> apparels</p>
+    </a>
+    <a href="#" class="collection">
+        <img src="img/men-collection.png" alt="">
+        <p class="collection-title">men <br> apparels</p>
+    </a>
+    <a href="#" class="collection">
+        <img src="img/accessories-collection.png" alt="">
+        <p class="collection-title">accessories</p>
+    </a>
+</section>
 
-
+<footer>
+    <script src="js/footer.js"></script>
+</footer>
 </body>
 </html>
