--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <title>Shopping</title>
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/nav.css">
 </head>
 <body>
 <nav class="navbar"></nav>
@@ -130,8 +131,7 @@
     </a>
 </section>
 
-<footer>
-    <script src="js/footer.js"></script>
-</footer>
+<footer></footer>
+<script src="js/footer.js"></script>
 </body>
 </html>
