--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Shopping</title>
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/footer.css">
 </head>
 <body>
 <nav class="navbar"></nav>
